...
           } else {
             // iOS 14 öncesi için .alert kullanılıyor
             completionHandler([.alert, .badge, .sound])
           }
        DispatchQueue.main.async {
               if let topVC = self.getTopViewController() {
                   let alert = UIAlertController(title: "Push Geldi",
                                                 message: notification.request.content.body,
                                                 preferredStyle: .alert)
                   alert.addAction(UIAlertAction(title: "Tamam", style: .default))
                   topVC.present(alert, animated: true)
               }
           }
    }

    // Handle user interaction with notifications
...
